--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-body {
-  background: #202020;
-  color: white;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  width: 100%;
+  height: 100%;
+  background-color: #202020;
 }
